--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "bootstrap": "^4.4.1",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "jquery": "^3.7.1",
+    "moment": "^2.29.4",
+    "popper.js": "^1.16.1",
+    "socket.io-client": "^4.7.2",
+    "sweetalert2": "^11.10.1",
+    "uuid": "^9.0.1",
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
